--- a/public/kaigo/detail/index.html
+++ b/public/kaigo/detail/index.html
@@ -7,20 +7,20 @@
     <meta name="format-detection" content="telephone=no">
     <link rel="icon" href="/favicon.ico">
     <title></title>
-    <link rel="apple-touch-icon" href="https://hitoshia.com/kaigo/common/img/icon.png"/>
+    <link rel="apple-touch-icon" href="https://xxx.com/kaigo/common/img/icon.png"/>
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="https://hitoshia.com/kaigo/">
-    <meta name="twitter:title" content="介護施設・老人ホームを探すならヒトシア介護">
-    <meta name="twitter:description" content="日本中の介護施設情報が全てここに。介護施設探しは「ヒトシア介護」">
-    <meta name="twitter:image" content="https://hitoshia.com/kaigo/common/img/og.png">
-    <meta name="msapplication-TileImage" content="https://hitoshia.com/kaigo/common/img/tile.png?fit=270%2C270">
+    <meta name="twitter:site" content="https://xxx.com/kaigo/">
+    <meta name="twitter:title" content="あれ">
+    <meta name="twitter:description" content="あれ">
+    <meta name="twitter:image" content="https://xxx.com/kaigo/common/img/og.png">
+    <meta name="msapplication-TileImage" content="https://xxx.com/kaigo/common/img/tile.png?fit=270%2C270">
     <link rel="manifest" href="/kaigo/common/json/manifest.json">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MF9B65V"
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-xxxxxx"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <noscript>
