--- a/public/kaigo/index.html
+++ b/public/kaigo/index.html
@@ -34,5 +34,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!--sample ですよ！-->
   </body>
 </html>
